实现标签的接口
